<resources>
    <string name="app_name">My Firebase Authentication &amp; Database</string>
    <string name="already_have_an_account_sign_in_here">Already have an account ?
        <u><b><i>Sign In here</i></b></u></string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account ?
        <u><b><i>Sign Up here</i></b></u></string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="welcome_you_are_logged_in">Welcome ! You are logged in</string>
    <string name="forgot_password"><u><i><b>Forgot Password ???</b></i></u></string>
    <string name="sign_up">Sign Up</string>
</resources>