<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <TextView
            android:id="@+id/signUpHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="50sp" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpHeading"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/myProfilePic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_profile_pic" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#2CB6A6"
                android:clickable="true"
                android:src="@drawable/ic_photo_camera"
                app:fabSize="normal"
                app:layout_anchor="@+id/myProfilePic"
                app:layout_anchorGravity="bottom|right|end" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <EditText
            android:id="@+id/myFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main"
            android:layout_margin="10dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/myPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myFullName"
            android:layout_margin="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/myEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myPhoneNumber"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/myPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myEmail"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textWebPassword" />

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myPassword"
            android:layout_margin="10dp"
            android:text="@string/create_account"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signInTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createAccountBtn"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/already_have_an_account_sign_in_here"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signInTxt"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

    </RelativeLayout>

</ScrollView>